# klee

./: LICENSE  package.json  pnpm-lock.yaml  tailwind.config.js
lib/windowskeyhook/windowshook/winkeyhook/: RustExport.cpp  RustExport.h  predefine.h  utils.h  winkeyhook.h  winkeyhook.vcxproj  winkeyhook.vcxproj.filters
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Lib/: CMakeLists.txt  build.bat
src-tauri/Lib/include/: RustExport.h  utils.h  winkeyhook.h
src-tauri/Lib/src/: RustExport.cpp  dllmain.cpp
src-tauri/src/: key_inter.rs  main.rs  mod_db.rs  mod_domain.rs  mod_system.rs
src-tauri/src/mod_api/: api.rs
src-tauri/src/mod_db/: sqlite_utils.rs
src-tauri/src/mod_domain/: schema.rs  text.rs
src-tauri/src/mod_system/: system_utils.rs
src/component/: HomePage.tsx  Menu.tsx  SearchBox.tsx  SystemSettings.tsx  TextConfig.tsx
src/pojo/bo/: TextBO.ts
src/pojo/vo/: ApiResponse.ts  TextVO.ts
src/tauri/: TauriClient.ts
