[package]
name = "klee"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sqlite = "0.36.1"
#rdev = { git = "https://github.com/fufesou/rdev" }
rdev = "0.5.3"
arboard = "3.4.0"
inputbot = "0.6.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
