[package]
name = "klee"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
rusqlite = "0.32.1"
rdev = { git = "https://github.com/fufesou/rdev" }
arboard = "3.4.0"
lazy_static = "1.5.0"
tauri-plugin-shell = "2"
log = "0.4.22"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
